--- a/styles.css
+++ b/styles.css
@@ -849,10 +849,13 @@ img {
   font-size: 1.5rem;
   color: #fff;
   margin: 0 var(--mb-2);
+  padding:4rem;
 }
 
 
-
+.ji:hover{
+color: white;
+}
 /* ===== MEDIA QUERIES=====*/
 @media screen and (max-width: 320px) {
   .home {
